# sdf-renderer

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  README.md  SDF test.webm  main.cpp  position.frag  raster.frag  raster.vert  sdfgen.comp  shader.comp  shader.frag  shader.vert  shadows.frag
